--- a/index.html
+++ b/index.html
@@ -1,6 +1,83 @@
-<html>
-<head>hayujin<head>
-<body>
-welcome
+<!DOCTYPE html>
+<html lang=" en "><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Yujin Ha | Developer</title>
+<link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" type="image/x-icon" href=""></head>
+<body><div class="container header-contianer">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
+      <h1>Yujin Ha</h1>
+      <h2>Developer</h2>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
+      <ul class="icons no-print"><li>
+            <a target="_blank" href="https://github.com/YujinHa" class="button button--sacnite button--round-l">
+              <i class="fa fa-github" title="Github link"></i>
+            </a>
+          </li><!--<li>
+            <a target="_blank" href="" class="button button--sacnite button--round-l">
+              <i class="fa fa-instagram" title="Instagram link"></i>
+            </a>
+          </li><li>
+            <a target="_blank" href="" class="button button--sacnite button--round-l">
+              <i class="fa fa-linkedin" title="Linkedin link"></i>
+            </a>
+          </li><li>
+            <a target="_blank" href="" class="button button--sacnite button--round-l">
+              <i class="fa fa-youtube-play" title="Youtube link"></i>
+            </a>
+          </li></ul>--><p>
+          Email: <a href="mailto:hamonica98@naver.com" target="_blank">hamonica98@naver.com</a>
+        </p></div>
+  </div>
+</div>
+<main class="page-content" aria-label="Content">
+        <div class="wrapper"><div class="container intro-container">
+  <h3>About Me</h3>
+  <div class="row clearfix"><div class="col-xs-12 col-sm-4 col-md-3 no-print">
+<!--        <span class="profile-img" style="background-image: url(images/profile.jpg)" />	--!>
+      </div><div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
+      <p>안녕하세요 하유진입니다.
+      저는 동국대학교 멀티미디어공학과에 재학중입니다.
+      평소에 영상을 찍고 편집하는 것을 좋아하고 CG에 관심이 많습니다. 또한 <mark>유니티</mark>를 활용한 게임개발에도 흥미가 있으며 여러 분야에서 <mark>디자인</mark>하는 것도 좋아합니다.
+    </div>
+  </div>
+</div>
+<div class="container more-container">
+  <h3>A Little More About Me</h3>
+  <div class="row clearfix">
+    <div class="col-md-12">
+      <p>My Interest</p>
+<ul>
+  <li>VFX</li>
+  <li>Linux</li>
+  <li>Unity</li>
+  <li>App Design</li>
+  <li>Web Design</li>
+  <li>Video Editing</li>
+  <li>Photoshop</li>
+  <li>Computer Graphics</li>
+  <li>Pipeline</li>
+  <li>Animation</li>
+  <li>PremierePro</li>
+  <li>Nuke</li>
+  <li>Maya</li>
+  <li>HTML</li>
+  <li>C</li>
+  <li>C++</li>
+  
+</ul>
+
+    </div>
+  </div>
+</div>
+</div>
+</main>
+
+<div class="container footer-container">
+	<p>Email - <a href="mailto:hamonica98@naver.com" target="_blank">hamonica98@naver.com</a></p>
+</div>
 </body>
 </html>
