--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h2>Developer</h2>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
-      <ul class="icons no-print"><li>
+      <ul class="icons no-print"><!--<li>
             <a target="_blank" href="https://github.com/YujinHa" class="button button--sacnite button--round-l">
               <i class="fa fa-github" title="Github link"></i>
             </a>
-          </li><!--<li>
+          </li><li>
             <a target="_blank" href="" class="button button--sacnite button--round-l">
               <i class="fa fa-instagram" title="Instagram link"></i>
             </a>
