프로필 사진 수정

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yujin Ha | Developer</title>
 <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="image/x-icon" href=""></head>
+  <link rel="shortcut icon" type="image/x-icon" href="profile.jpeg"></head>
 <body><div class="container header-contianer">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
