정보 추가함

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
       <h2>Developer</h2>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
-      <ul class="icons no-print"><!--<li>
+      <ul class="icons no-print"><li>
             <a target="_blank" href="https://github.com/YujinHa" class="button button--sacnite button--round-l">
               <i class="fa fa-github" title="Github link"></i>
             </a>
           </li><li>
-            <a target="_blank" href="" class="button button--sacnite button--round-l">
+            <a target="_blank" href="https://www.instagram.com/hayj_0305/?hl=ko" class="button button--sacnite button--round-l">
               <i class="fa fa-instagram" title="Instagram link"></i>
             </a>
           </li><li>
-            <a target="_blank" href="" class="button button--sacnite button--round-l">
+            <a target="_blank" href="https://www.linkedin.com/feed/?trk=onboarding-landing" class="button button--sacnite button--round-l">
               <i class="fa fa-linkedin" title="Linkedin link"></i>
             </a>
           </li><li>
-            <a target="_blank" href="" class="button button--sacnite button--round-l">
+            <a target="_blank" href="https://www.youtube.com/user/hamonica98" class="button button--sacnite button--round-l">
               <i class="fa fa-youtube-play" title="Youtube link"></i>
             </a>
-          </li></ul>--><p>
+          </li></ul><p>
           Email: <a href="mailto:hamonica98@naver.com" target="_blank">hamonica98@naver.com</a>
         </p></div>
   </div>
@@ -37,11 +37,12 @@
         <div class="wrapper"><div class="container intro-container">
   <h3>About Me</h3>
   <div class="row clearfix"><div class="col-xs-12 col-sm-4 col-md-3 no-print">
-<!--        <span class="profile-img" style="background-image: url(images/profile.jpg)" />	--!>
+           <span class="profile-img" style="background-image: url(images/profile.jpg)" />	
       </div><div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
       <p>안녕하세요 하유진입니다.
       저는 동국대학교 멀티미디어공학과에 재학중입니다.
-      평소에 영상을 찍고 편집하는 것을 좋아하고 CG에 관심이 많습니다. 또한 <mark>유니티</mark>를 활용한 게임개발에도 흥미가 있으며 여러 분야에서 <mark>디자인</mark>하는 것도 좋아합니다.
+      평소에 영상을 찍고 편집하는 것을 좋아하고 <mark>CG</mark>에 관심이 많습니다. 또한 <mark>유니티</mark>를 활용한 게임개발에도 흥미가 있으며 여러 분야에서 <mark>디자인</mark>하는 것도 좋아합니다.
+      안드로이드 앱개발에서 앱디자인을 맡아보았습니다. 유니티를 이용해서 2D게임 제작을 해보았습니다. 각종 UCC 공모전에 출품하고 수상하였습니다.
     </div>
   </div>
 </div>
@@ -67,6 +68,8 @@
   <li>HTML</li>
   <li>C</li>
   <li>C++</li>
+  <li>travel</li>
+  <li>Cook</li>
   
 </ul>
 
@@ -75,9 +78,5 @@
 </div>
 </div>
 </main>
-
-<div class="container footer-container">
-	<p>Email - <a href="mailto:hamonica98@naver.com" target="_blank">hamonica98@naver.com</a></p>
-</div>
 </body>
 </html>
