목록 제목 수정

--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
   </div>
 </div>
 <div class="container more-container">
-  <h3>A Little More About Me</h3>
+  <h3>My Interest</h3>
   <div class="row clearfix">
     <div class="col-md-12">
-      <p>My Interest</p>
 <ul>
   <li>VFX</li>
   <li>Linux</li>
