--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang=" en "><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Yujin Ha | Developer</title>
+  <title>Yujin Ha | Developer&Artist</title>
 <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="profile.jpeg"></head>
 <body><div class="container header-contianer">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
       <h1>Yujin Ha</h1>
-      <h2>Developer</h2>
+      <h2>Developer&Artist</h2>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
       <ul class="icons no-print"><li>
