--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yujin Ha | Developer&Artist</title>
 <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" type="image/x-icon" href="profile.jpeg"></head>
+  <link rel="shortcut icon" type="image/x-icon" href=""></head>
 <body><div class="container header-contianer">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
@@ -37,7 +37,7 @@
         <div class="wrapper"><div class="container intro-container">
   <h3>About Me</h3>
   <div class="row clearfix"><div class="col-xs-12 col-sm-4 col-md-3 no-print">
-           <span class="profile-img" style="background-image: url(images/profile.jpg)" />	
+           <span class="profile-img" style="background-image: url(images/profile.jpeg)" />	
       </div><div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
       <p>안녕하세요 하유진입니다.
       저는 동국대학교 멀티미디어공학과에 재학중입니다.
