--- a/index.html
+++ b/index.html
@@ -39,10 +39,39 @@
   <div class="row clearfix"><div class="col-xs-12 col-sm-4 col-md-3 no-print">
            <span class="profile-img" style="background-image: url(images/profile.jpeg)" />	
       </div><div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
-      <p>안녕하세요 하유진입니다.
-      저는 동국대학교 멀티미디어공학과에 재학중입니다.
+      <p>안녕하세요 하유진입니다.<br>
+      저는 현재 동국대학교 멀티미디어공학과에 재학중입니다.<br>
       평소에 영상을 찍고 편집하는 것을 좋아하고 <mark>CG</mark>에 관심이 많습니다. 또한 <mark>유니티</mark>를 활용한 게임개발에도 흥미가 있으며 여러 분야에서 <mark>디자인</mark>하는 것도 좋아합니다.
       안드로이드 앱개발에서 앱디자인을 맡아보았습니다. 유니티를 이용해서 2D게임 제작을 해보았습니다. 각종 UCC 공모전에 출품하고 수상하였습니다.
+    </div>
+  </div>
+</div>
+
+<div class="container more-container">
+  <h3>Experience</h3>
+  <div class="row clearfix">
+    <div class="col-md-12">
+<ul>
+  <li>Unity 2D Game development</li>
+  <li>Android App Design-</li>
+  <li>Animation 동아리</li>
+  <li>UCC contest</li>
+</ul>
+    </div>
+  </div>
+</div>
+
+<div class="container more-container">
+  <h3>Retained Certificate</h3>
+  <div class="row clearfix">
+    <div class="col-md-12">
+<ul>
+  <li>Adobe Certified Associate Premiere Pro </li>
+  <li>GTQ Photoshop</li>
+  <li>컴퓨터 그래픽스운용기능사</li>
+  <li>컴퓨터 활용능력 필기</li>
+  <li>제과기능사 필기</li>
+</ul>
     </div>
   </div>
 </div>
@@ -69,9 +98,8 @@
   <li>C++</li>
   <li>travel</li>
   <li>Cook</li>
-  
+  <li>Nail Art</li>
 </ul>
-
     </div>
   </div>
 </div>
