내용 추가함

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
   <div class="row clearfix">
     <div class="col-md-12">
 <ul>
+  <li>VFX TD 육성 프로그램 수료-FOUNDRY KOREA</li>
   <li>Unity 2D Game development</li>
   <li>Android App Design-동국 SW 공모대전 동상</li>
-  <li>Animation 동아리</li>
-  <li>UCC contest</li>
+  <li>Animation 동아리</li><br>
+  <li>여러 UCC 공모전 참가</li>
   <li>공드 시나리오 공모전-장려상</li>
   <li>해커스톡 SNS 영상공모전-인기상</li>
   <li>대학 생활 가이드 UCC 공모전</li>
