--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
            <span class="profile-img" style="background-image: url(images/profile.jpeg)" />	
       </div><div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
       <p>안녕하세요 하유진입니다.<br>   
-      가상 물체 또는 환경을 시각적으로 보이도록 개발하는 것에 관심이 많아 연구중이며, 이를 현실 세계와 합성 하는 것에 대해 관심이 많습니다.
+      가상 물체 또는 환경을 시각적으로 보이도록 개발하는 것에 관심이 많아 연구중이며, 이를 현실 세계와 합성 하는 것에 대해 관심이 많습니다.<br><br>
       
-      학부때부터 게임 개발에 큰 흥미를 느껴 c++기반 단순 아케이드 게임 뿐만 아니라 유니티 또는 언리얼 엔진을 활용하여 꾸준히 게임 개발 및 기획했습니다. 또한 가상현실과 컴퓨터 그래픽스 수업을 통해 Ray Tracing, Ray Casting, 그래픽스 파이프라인에 대해 배우고 구현하며 흥미를 느꼈습니다.<br>
+      학부때부터 게임 개발에 큰 흥미를 느껴 <mark>C++</mark>기반 단순 아케이드 게임 뿐만 아니라 <mark>유니티</mark> 또는 <mark>언리얼 엔진</mark>을 활용하여 꾸준히 게임 개발 및 기획했습니다. 또한 <mark>가상현실</mark>과 <mark>컴퓨터 그래픽스</mark> 수업을 통해 Ray Tracing, Ray Casting, 그래픽스 파이프라인에 대해 배우고 구현하며 흥미를 느꼈습니다.<br>
       VFX에 대한 관심으로 VFX TD육성 프로그램을 수료하여 파이썬을 이용한 파이프라인 개발의 이해도와 안목을 높였습니다. 여러 차례의 게임 개발, 그래픽스 수업, VFX TD육성 프로그램, 3D Max 특강 등을 통해 전체적인 3D 분야에 대한 이해를 높여왔습니다.<br>
-      3D 지식과 영상처리 지식으로 졸업 작품 '실시간 시선 교정 화상 채팅'에서 시선 교정 알고리즘 개발을 맡아 좋은 결과를 얻었고, 이를 확장하여 더 많은 활용 기능을 개발한 후 창의적 종합설계 경진대회 등에서 여러 상을 수상하기도 하였습니다.
+      3D 지식과 영상처리 지식으로 졸업 작품 <mark>'실시간 시선 교정 화상 채팅'</mark>에서 시선 교정 알고리즘 개발을 맡아 좋은 결과를 얻었고, 이를 확장하여 더 많은 활용 기능을 개발한 후 창의적 종합설계 경진대회 등에서 여러 상을 수상하기도 하였습니다.<br><br>
         
-      현재 동국대학교 멀티미디어공학과 <mark>그래픽스 응용 연구실</mark>에서 그래픽스 이론 및 응용, 기하모델링, 가상/증강현실에 대해 연구하며 모델링 툴을 개발하고 있습니다. 연구실에서 개발중인 c++ 기반 모델링 툴에서는 베지에 곡선 및 곡면, Non-Uniform Rational B-spline 곡선 및 곡면, 메쉬 위의 다양한 곡선 생성 및 메쉬 위의 시뮬레이션과 폰트 등 응용 툴을 개발하였습니다.
+      현재 동국대학교 멀티미디어공학과 <mark>그래픽스 응용 연구실</mark>에서 그래픽스 이론 및 응용, 기하모델링, 가상/증강현실에 대해 연구하며 모델링 툴을 개발하고 있습니다. 연구실에서 개발중인 c++ 기반 모델링 툴에서는 베지에 곡선 및 곡면, Non-Uniform Rational B-spline 곡선 및 곡면, <mark>메쉬 위의 곡선 계산</mark> 및 메쉬 위의 시뮬레이션과 폰트 등 응용 툴을 개발하였습니다.
       2019년부터는 (주)비즈아이엔에프에서 인턴으로 다양한 <mark>VR, AR, MR</mark> 프로젝트에 참여하여 콘텐츠 개발 및 기획을 함께하고 있습니다.<br> 
     </div>
   </div>
@@ -60,32 +60,33 @@
   <li><mark>ComputerGraphics</mark></li>
   <li><mark>Modeling Programming</mark></li>
   <li><mark>VR, AR, MR, XR</mark></li>
-  <li>Unity</li>
-  <li>Unreal</li>
+  <li><mark>Unity</mark></li>
+  <li><mark>Unreal</mark></li>
   <li><mark>Image Processing</mark></li>
   <li><mark>Parallel Processing</mark></li>
-  <li>Maya</li>
-  <li>Max</li>
-  <li>VFX</li>
-  <li>CUDA</li>
-  <li>Photoshop</li>
-  <li>PremierePro</li>
-  <li>Illustrator</li>
-  <li>Indeign</li>
-  <li>Animate</li>
-  <li>App Design</li>
-  <li>Web Design</li>
-  <li>Video Editing</li>
-  <li>Linux</li>
-  <li>Pipeline</li>
-  <li>Nuke</li><br>
+  <li><mark>Maya</mark></li>
+  <li><mark>Max</mark></li>
+  <li><mark>VFX</mark></li>
+  <li><mark>CUDA</mark></li>
+  <li><mark>Photoshop</mark></li>
+  <li><mark>PremierePro</mark></li>
+  <li><mark>Illustrator</mark></li>
+  <li><mark>Indeign</mark></li>
+  <li><mark>Animate</mark></li>
+  <li><mark>App Design</mark></li>
+  <li><mark>Web Design</mark></li>
+  <li><mark>Linux</mark></li>
+  <li><mark>Pipeline</mark></li>
+  <li><mark>Nuke</mark></li><br>
+  <li><mark>Video Editing</mark></li><br>
   
-  <li>C++</li>
-  <li>C</li>
-  <li>C#</li>
-  <li>Python</li>
-  <li>HTML/CSS</li>
-  <li>javascript</li>
+  <<b>Language</b>>
+  <li><mark>C++</mark></li>
+  <li><mark>C</mark></li>
+  <li><mark>C#</mark></li>
+  <li><mark>Python</mark></li>
+  <li><mark>HTML/CSS</mark></li>
+  <li><mark>javascript</mark></li>
 </ul>
     </div>
   </div>
@@ -96,10 +97,10 @@
   <div class="row clearfix">
     <div class="col-md-12">
 <ul>
-  <li>세화 여자 고등학교(2014/03 ~ 2017/02)</li>
-  <li>동국대학교 멀티미디어공학과 학사(2017/03 ~ 2020/08 : 조기졸업, 학석사연계과정)</li>
-  <li>동국대학교 멀티미디어공학과 석사(2020/09 ~ 2022/02(졸업 예정))</li>
-  <li>그래픽스 응용 연구실: <a href="http://gaia.dongguk.edu" target="_blank">http://gaia.dongguk.edu</a></li>
+  <li>세화 여자 고등학교 (2014/03 ~ 2017/02)</li>
+  <li>동국대학교 멀티미디어공학과 학사 (2017/03 ~ 2020/08 : 조기졸업, 학석사연계과정)</li>
+  <li>동국대학교 멀티미디어공학과 석사 (2020/09 ~ 2022/02: 졸업 예정)</li>
+  <li>그래픽스 응용 연구실:  <a href="http://gaia.dongguk.edu" target="_blank">http://gaia.dongguk.edu</a></li>
 </ul>
     </div>
   </div>
@@ -110,15 +111,15 @@
   <div class="row clearfix">
     <div class="col-md-12">
 <ul>
-  <li>(주)비즈아이엔에프 - 개발부 인턴(2019/03 ~ 2021/12(예정))</li>
-  <li>  [2019]VR·AR·MR 연동 콘텐츠 제작을 위한 이기종 장비 상호 운용 프레임워크 개발</li>
+  <li>(주)비즈아이엔에프 - 개발부 인턴 (2019/03 ~ 2021/12(예정))</li>
+  <li> [2019] <b> VR·AR·MR 연동 콘텐츠 제작을 위한 이기종 장비 상호 운용 프레임워크 개발</b></li>
   Depth 카메라인 ZED, KINECT 이용 유니티 게임 콘텐츠 개발 / KINECT 카메라로 마커 인식 후 영상처리 / 집 평면도 이미지 영상처리 및 인식 후 3D 모델 자동 생성 개발<br>
 
-  <li>  [2020]클라우드 기반 5G XR 콘텐츠 프레임워크 고도화</li>
+  <li> [2020] <b> 클라우드 기반 5G XR 콘텐츠 프레임워크 고도화</b></li>
   GPS와 AR을 이용하여 유니티 게임 콘텐츠 기획 및 개발 / AR Navigation 개발<br>
 
-  <li>  [2020~2021]실시간 상호작용을 지원하는 몰입형 확장현실 과학문화전시 시스템 개발</li>
-  VR·AR·MR을 이용한 자동차 경주 콘텐츠  / 베지에 곡면을 이용한 빔프로젝터 와핑 기술 개발을 통해 곡면에 의한 영상 왜곡 해소<br>
+  <li> [2020~2021] <b> 실시간 상호작용을 지원하는 몰입형 확장현실 과학문화전시 시스템 개발</b></li>
+  VR·AR·MR을 이용한 자동차 경주 콘텐츠 / 베지에 곡면을 이용한 빔프로젝터 와핑 기술 개발을 통해 곡면에 의한 영상 왜곡 해소<br>
 </ul>
     </div>
   </div>
