오탈자 수정

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <li><mark>Web Design</mark></li>
   <li><mark>Linux</mark></li>
   <li><mark>Pipeline</mark></li>
-  <li><mark>Nuke</mark></li><br>
+  <li><mark>Nuke</mark></li>
   <li><mark>Video Editing</mark></li><br>
   
   <<b>Language</b>>
@@ -86,7 +86,7 @@
   <li><mark>C#</mark></li>
   <li><mark>Python</mark></li>
   <li><mark>HTML/CSS</mark></li>
-  <li><mark>javascript</mark></li>
+  <li><mark>Javascript</mark></li>
 </ul>
     </div>
   </div>
