--- a/index.html
+++ b/index.html
@@ -57,36 +57,10 @@
   <div class="row clearfix">
     <div class="col-md-12">
 <ul>
-  <li><mark>ComputerGraphics</mark></li>
-  <li><mark>Modeling Programming</mark></li>
-  <li><mark>VR, AR, MR, XR</mark></li>
-  <li><mark>Unity</mark></li>
-  <li><mark>Unreal</mark></li>
-  <li><mark>Image Processing</mark></li>
-  <li><mark>Parallel Processing</mark></li>
-  <li><mark>Maya</mark></li>
-  <li><mark>Max</mark></li>
-  <li><mark>VFX</mark></li>
-  <li><mark>CUDA</mark></li>
-  <li><mark>Photoshop</mark></li>
-  <li><mark>PremierePro</mark></li>
-  <li><mark>Illustrator</mark></li>
-  <li><mark>Indeign</mark></li>
-  <li><mark>Animate</mark></li>
-  <li><mark>App Design</mark></li>
-  <li><mark>Web Design</mark></li>
-  <li><mark>Linux</mark></li>
-  <li><mark>Pipeline</mark></li>
-  <li><mark>Nuke</mark></li>
-  <li><mark>Video Editing</mark></li><br>
+  <mark>ComputerGraphics</mark> <mark>Modeling Programming</mark> <mark>VR, AR, MR, XR</mark> <mark>Unity</mark> <mark>Unreal</mark><mark>Image Processing</mark><mark>Parallel Processing</mark><mark>Maya</mark><mark>Max</mark><mark>VFX</mark><mark>CUDA</mark><mark>Photoshop</mark><mark>PremierePro</mark>><mark>Illustrator</mark><mark>Indeign</mark><mark>Animate</mark><mark>App Design</mark><mark>Web Design</mark><mark>Linux</mark><mark>Pipeline</mark><mark>Nuke</mark><mark>Video Editing</mark><br>
   
   <<b>Language</b>>
-  <li><mark>C++</mark></li>
-  <li><mark>C</mark></li>
-  <li><mark>C#</mark></li>
-  <li><mark>Python</mark></li>
-  <li><mark>HTML/CSS</mark></li>
-  <li><mark>Javascript</mark></li>
+  <mark>C++</mark><mark>C</mark><mark>C#</mark><mark>Python</mark><mark>HTML/CSS</mark><mark>Javascript</mark>
 </ul>
     </div>
   </div>
@@ -131,8 +105,8 @@
     <div class="col-md-12">
 <ul>
   <li>동국대학교 페인터즈 벽화봉사 동아리 / 2017 ~ 2018</li>
-  <li>Animation 동아리 '빙봉':Adobe Animate 이용 애니메이션 제작 및 스톱 모션 애니메이션 기획 및 제작 / 2018 ~ 2019</li>
-  <li>VFX TD 육성 프로그램 수료 - FOUNDRY KOREA: 파이썬을 이용한 TD 기술 학습, Maya, Nuke 등 프로그램 활용 / 2019</li>
+  <li>Animation 동아리 '빙봉':Adobe Animate 이용 애니메이션 제작 및 스톱 모션 애니메이션 기획 및 제작 / 2018 ~ 2019</li><br>
+  <li><b>VFX TD 육성 프로그램 수료 - FOUNDRY KOREA: 파이썬을 이용한 TD 기술 학습, Maya, Nuke 등 프로그램 활용</b> / 2019</li>
   <li>3D Max 특강 수료: 캐릭터 작업 및 유니티 연동 학습 / 2019</li>
   <li>DirectX12 스터디 / 2019</li>
 </ul>
