--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <div class="row clearfix">
     <div class="col-md-12">
 <ul>
-  <mark>ComputerGraphics</mark>, <mark>Modeling Programming</mark>, <mark>VR, AR, MR, XR</mark>, <mark>Unity</mark>, <mark>Unreal</mark>, <mark>Image Processing</mark>, <mark>Parallel Processing</mark> <br>
-  <mark>Maya</mark>, <mark>3D Max</mark>, <mark>VFX</mark>, <mark>CUDA</mark>, <mark>Photoshop</mark>, <mark>PremierePro</mark>, <mark>Illustrator</mark>, <mark>Indeign</mark>, <mark>Animate</mark>, <mark>App Design</mark>, <mark>Web Design</mark>, <mark>Linux</mark>, <mark>Pipeline</mark>, <mark>Nuke</mark>, <mark>Video Editing</mark><br>
+  <mark>ComputerGraphics</mark>, <mark>Modeling Programming</mark>, <mark>VR, AR, MR, XR</mark>, <mark>Unity</mark>, <mark>Unreal</mark>, <mark>Image Processing</mark>, <mark>Parallel Processing</mark>, <mark>CUDA</mark>, <mark>Maya</mark>, <mark>3D Max</mark>, <mark>VFX</mark><br>
+  <mark>Pipeline</mark>, <mark>Nuke</mark>, <mark>Photoshop</mark>, <mark>PremierePro</mark>, <mark>Illustrator</mark>, <mark>Indeign</mark>, <mark>Animate</mark>, <mark>App Design</mark>, <mark>Web Design</mark>, <mark>Video Editing</mark><br><br>
   
   <<b>Language</b>><br>
   <mark>C++</mark>, <mark>C</mark>, <mark>C#</mark>, <mark>Python</mark>, <mark>HTML/CSS</mark>, <mark>Javascript</mark>
