Update Video Size

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       
       학부때부터 게임 개발에 큰 흥미를 느껴 <mark>C++</mark>기반 단순 아케이드 게임 뿐만 아니라 <mark>유니티</mark> 또는 <mark>언리얼 엔진</mark>을 활용하여 꾸준히 게임 개발 및 기획했습니다.(Unity 3D 게임: <a href="https://youtu.be/8OMrVNT2dNY" target="_blank">https://youtu.be/8OMrVNT2dNY</a>)<br><br>  
       또한 <mark>가상현실</mark>과 <mark>컴퓨터 그래픽스</mark> 수업을 통해 Ray Tracing, Ray Casting, 그래픽스 파이프라인에 대해 배우고 구현하며 흥미를 느꼈습니다.<br><br> 
-      <video muted autoplay loop>
+      <video muted autoplay loop width = "1080" height="720">
         <source src = "RayTracer_GPU.mp4" type="video/mp4">
         Ray Tracer with several filter - GPU ver
       </video><br><br> 
