--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       3D 지식과 영상처리 지식으로 졸업 작품 <mark>'실시간 시선 교정 화상 채팅'</mark>에서 시선 교정 알고리즘 개발을 맡아 좋은 결과를 얻었습니다. 아래의 영상은 졸업작품 수업의 최종 결과입니다. 이를 확장하여 더 많은 활용 기능을 개발한 후 창의적 종합설계 경진대회 등에서 여러 상을 수상하기도 하였습니다. <br><br>
       <iframe width="963" height="542" src="https://www.youtube.com/embed/lf_QF9xaDYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
         
-      현재 동국대학교 멀티미디어공학과 <mark>그래픽스 응용 연구실</mark>에서 그래픽스 이론 및 응용, 기하모델링, 가상/증강현실에 대해 연구하며 모델링 툴을 개발하고 있습니다. 연구실에서 개발중인 c++ 기반 모델링 툴에서는 베지에 곡선 및 곡면, Non-Uniform Rational B-spline 곡선 및 곡면, <mark>메쉬 위의 곡선 계산</mark> 및 메쉬 위의 시뮬레이션과 폰트 등 응용 툴을 개발하였습니다.<br><br>  
-      2019년부터는 (주)비즈아이엔에프에서 인턴으로 다양한 <mark>VR, AR, MR</mark> 프로젝트에 참여하여 콘텐츠 개발을 함께 진행하고 있습니다.(<a href="http://www.vizinf.com/home-2/13844-2" target="_blank">http://www.vizinf.com/home-2/13844-2</a>)<br> 
+      현재 동국대학교 멀티미디어공학과 <mark>그래픽스 응용 연구실</mark>에서 그래픽스 이론 및 응용, 기하모델링, 가상/증강현실에 대해 연구하며 모델링 툴을 개발하고 있습니다. 연구실에서 개발중인 c++ 기반 모델링 툴에서는 베지에 곡선 및 곡면, Non-Uniform Rational B-spline 곡선 및 곡면, <mark>메쉬 위의 곡선 계산</mark> 및 메쉬 위의 시뮬레이션과 폰트 등 응용 툴을 개발하였습니다.(코드 공개 불가)<br><br>  
+      2019년부터는 (주)비즈아이엔에프에서 인턴으로 다양한 <mark>VR, AR, MR</mark> 프로젝트에 참여하여 콘텐츠 개발을 함께 진행하고 있습니다.(코드 공개 불가 / 참여 프로젝트: 링크 확인 -> <a href="http://www.vizinf.com/home-2/13844-2" target="_blank">http://www.vizinf.com/home-2/13844-2</a>)<br> 
     </div>
   </div>
 </div>
