--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </div>
 
 <div class="container more-container">
-  <h3>Experience</h3>
+  <h3>Awards</h3>
   <div class="row clearfix">
     <div class="col-md-12">
 <ul>
