--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="row clearfix">
     <div class="col-md-12">
 <ul>
-  <li>(주)비즈아이엔에프 - 개발부 인턴 (2019/03 ~ 2021/12(예정)) </li>
+  <b><(주)비즈아이엔에프 - 개발부 인턴 (2019/03 ~ 2021/12(예정))></b>
   <li> [2019] <b> VR·AR·MR 연동 콘텐츠 제작을 위한 이기종 장비 상호 운용 프레임워크 개발</b></li>
   Depth 카메라인 ZED, KINECT 이용 유니티 게임 콘텐츠 개발 / KINECT 카메라로 마커 인식 후 영상처리 / 집 평면도 이미지 영상처리 및 인식 후 3D 모델 자동 생성 개발<br>
 
