Update About Me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <span class="profile-img" style="background-image: url(images/profile.jpeg)" />	
       </div><div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
       <p>안녕하세요 하유진입니다.<br>   
-      가상 물체 또는 환경을 시각적으로 보이도록 개발하는 것에 관심이 많아 연구중이며, 이를 현실 세계와 합성 하는 것에 대해 관심이 많습니다.<br><br>
+      컴퓨터 그래픽스 분야의 모델링을 연구중이며, C++기반 모델링 툴 개발 및 게임 엔진을 이용한 개발을 주로 합니다. 가상 물체 또는 환경을 시각적으로 표현하는 것과 이를 현실 세계와 합성 하는 것에 대해 관심이 많습니다. <br><br>
       
       <b>< 게임 개발 ></b><br><br>
       학부때부터 게임 개발에 큰 흥미를 느껴 <mark>C++</mark>, <mark>유니티</mark>, <mark>언리얼 엔진</mark>을 활용하여 꾸준히 게임 개발 및 기획했습니다. 아래는 개발했던 게임 중 Unity 2D로 제작한 2인 멀티 플레이 게임 'Savior'의 플레이 이미지와 Unity 3D로 제작한 RPG 게임 'Guardians Rulette' 영상입니다. 이 외에도 C++기반 단순 아케이드 게임 'Sen's Missing'뿐만 Unreal Engine을 이용한 3D 드래곤 RPG 게임을 기획 및 개발하였고 현재 Unity 기반 3D 오픈월드 게임인 'DoD:Door of Dimension'을 기획 후 개발 중에 있습니다.<br><br>
