Update about me

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <iframe width="963" height="542" src="https://www.youtube.com/embed/lf_QF9xaDYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br> 
         
       <b>< VFX ></b><br><br>
-      VFX에 대한 관심으로 VFX TD육성 프로그램을 수료하여 파이썬을 이용한 파이프라인 개발의 이해도와 안목을 높였습니다. 여러 차례의 게임 개발, 그래픽스 수업, <mark>VFX TD육성 프로그램</mark>(<a href="https://github.com/YujinHa/curriculum" target="_blank">https://github.com/YujinHa/curriculum</a>), 3D Max 특강 등을 통해 전체적인 3D 분야에 대한 이해를 높여왔습니다.<br><br><br>  
+      VFX에 대한 관심으로 VFX TD육성 프로그램을 수료하여 파이썬을 이용한 VFX, 파이프라인 개발의 이해도와 안목을 높였습니다. 여러 차례의 게임 개발, 그래픽스 수업, <mark>VFX TD육성 프로그램</mark>(<a href="https://github.com/YujinHa/curriculum" target="_blank">https://github.com/YujinHa/curriculum</a>), 3D Max 특강 등을 통해 전체적인 3D 분야에 대한 이해를 높여왔습니다.<br><br><br>  
         
       <b>< 모델링 연구 및 툴 개발 ></b><br><br>
       현재 동국대학교 멀티미디어공학과 <mark>그래픽스 응용 연구실</mark>에서 그래픽스 이론 및 응용, 기하모델링, 가상/증강현실에 대해 연구하며 모델링 툴을 개발하고 있습니다. 연구실에서 개발중인 c++ 기반 모델링 툴에서는 베지에 곡선 및 곡면, Non-Uniform Rational B-spline 곡선 및 곡면, <mark>메쉬 위의 곡선 계산</mark> 및 메쉬 위의 시뮬레이션과 폰트 등 응용 툴을 개발하였습니다. (코드 공개 불가)<br><br><br>   
