--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     <div class="col-md-12">
 <ul>
   <li>세화 여자 고등학교 (2014/03 ~ 2017/02)</li>
-  <li>동국대학교 멀티미디어공학과 학사 (2017/03 ~ 2020/08 : 조기졸업, 학석사연계과정)</li>
-  <li>동국대학교 멀티미디어공학과 석사 (2020/09 ~ 2022/02: 졸업 예정)</li>
+  <li>동국대학교 멀티미디어공학과 학사 (2017/03/02 ~ 2020/08/24 : 학석사연계과정)</li>
+  <li>동국대학교 멀티미디어공학과 석사 (2020/09/01 ~ 2022/02: 졸업 예정)</li>
   <li>그래픽스 응용 연구실:  <a href="http://gaia.dongguk.edu" target="_blank">http://gaia.dongguk.edu</a></li>
 </ul>
     </div>
@@ -127,8 +127,8 @@
   GPS와 AR을 이용하여 유니티 게임 콘텐츠 기획 및 개발 / AR Navigation 개발<br><br>
   <img src="images/AR Navy2.jpg" width = "341" height = "720"><br><br><br>
 
-  <li> [2020~2021] <b> 실시간 상호작용을 지원하는 몰입형 확장현실 과학문화전시 시스템 개발</b></li>
-  VR·AR·MR을 이용한 자동차 경주 콘텐츠 / 베지에 곡면을 이용한 빔프로젝터 와핑 기술 개발을 통해 곡면에 의한 영상 왜곡 해소<br><br>
+  <li> [2021] <b> 실시간 상호작용을 지원하는 몰입형 확장현실 과학문화전시 시스템 개발</b></li>
+  VR·AR·MR을 이용한 자동차 경주 콘텐츠 / 베지에 곡면을 이용한 빔프로젝터 와핑 기술 개발을 통해 곡면에 의한 영상 왜곡 해소 / AR Face Capture for iOS<br><br>
   <img src="images/ProjectorWarp.png" width = "922" height = "516"><br><br><br>
 </ul>
     </div>
